[package]
authors = ["nyanzebra"]                       # Will, put your alias or contact info here :)
name = "graphics"
version = "0.1.0"
edition = "2021"                              # Can upgrade to 2024 after March?
description = "Graphics for the game engine."

[dependencies]
vulkano = { workspace = true, default-features = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true, default-features = true }
