[package]
authors = ["nyanzebra"]                                      # Will, put your alias or contact info here :)
name = "ecs"
version = "0.1.0"
edition = "2021"                                             # Can upgrade to 2024 after March?
description = "Entity Component System for the game engine."


[dependencies]
ecs_macros = { path = "../ecs_macros" }
